Added psd1 file extension
Assigned *.psd1 to diff=astextplain

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,6 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+# PowerShell Module manifest
+*.psd1  diff=astextplain
