--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+# PowerShell Module files are Windows ASCii text files
+*.psm1 text eol=crlf
+*.psd1 text eol=crlf
+
 # Auto detect text files and perform LF normalization
 * text=auto
 
@@ -15,6 +19,3 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
-
-# PowerShell Module manifest
-*.psd1  diff=astextplain
